--- a/package.json
+++ b/package.json
@@ -1,13 +1,36 @@
 {
   "name": "form-item",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Odyzeo form item component with Vue",
+  "main": "dist/form-item.umd.js",
+  "keywords": [
+    "odyzeo",
+    "form",
+    "input",
+    "textarea",
+    "vue"
+  ],
+  "author": "Odyzeo <tomas.zamba@odyzeo.com, peter.baricic@odyzeo.com> (https://odyzeo.com)",
+  "license": "ISC",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-lib": "vue-cli-service build --target lib --name form-item ./src/components/FormItem.vue",
     "lint": "vue-cli-service lint"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/odyzeo/form-item.git"
+  },
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    ".js"
+  ],
   "dependencies": {
+    "normalize.css": "^8.0.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
@@ -25,10 +48,12 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
       "@vue/airbnb"
     ],
-    "rules": {},
+    "rules": {
+      "no-underscore-dangle": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
