--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "build-lib": "vue-cli-service build --target lib --name form-item ./src/components/FormItem.vue",
+        "build-lib": "vue-cli-service build --target lib --name form-item ./src/plugin/formItem.js",
         "lint": "vue-cli-service lint"
     },
     "repository": {
