--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
     "version": "2.5.0",
     "description": "Odyzeo form item component with Vue",
     "main": "dist/form-item.common.js",
+    "module": "src/index.js",
+    "source": "src/index.js",
+    "browser": "dist/form-item.umd.min.js",
+    "style": "dist/form-item.css",
+    "less": "src/less/form-item.less",
+    "files": [
+        "dist/*",
+        "src/*",
+        "package.json"
+    ],
     "keywords": [
         "odyzeo",
         "form",
@@ -14,36 +24,32 @@
     "publishConfig": {
         "access": "public"
     },
-    "license": "ISC",
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "build-lib": "vue-cli-service build --target lib --name form-item ./src/index.js",
         "lint": "vue-cli-service lint"
     },
+    "peerDependencies": {
+        "vue": "^2.6.12"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/odyzeo/form-item.git"
     },
-    "files": [
-        "dist/*",
-        "src/*",
-        "public/*",
-        "*.json",
-        ".js"
-    ],
     "devDependencies": {
+        "@babel/core": "^7.14.8",
+        "@babel/eslint-parser": "^7.14.7",
+        "@babel/eslint-plugin": "^7.14.5",
         "@vue/cli-plugin-babel": "^4.5.12",
         "@vue/cli-plugin-eslint": "^4.5.12",
         "@vue/cli-service": "^4.5.12",
         "@vue/eslint-config-airbnb": "^5.3.0",
-        "babel-eslint": "^10.1.0",
         "eslint": "^7.25.0",
         "eslint-plugin-vue": "^7.9.0",
         "less": "^4.1.1",
         "less-loader": "^7.3.0",
         "normalize.css": "^8.0.1",
-        "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.12"
     },
     "eslintConfig": {
@@ -94,17 +100,11 @@
             ]
         },
         "parserOptions": {
-            "parser": "babel-eslint"
-        }
-    },
-    "postcss": {
-        "plugins": {
-            "autoprefixer": {}
+            "parser": "@babel/eslint-parser"
         }
     },
     "browserslist": [
-        "defaults",
-        "> 0.5% in SK"
+        "defaults"
     ],
     "dependencies": {
         "lodash.debounce": "^4.0.8"
