Update annoying eslint rules

--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
             "@vue/airbnb"
         ],
         "rules": {
+            "no-console": 0,
+            "semi": 0,
             "indent": 0,
             "vue/script-indent": [
                 2,
