--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
         "@babel/eslint-parser": "^7.14.7",
         "@babel/eslint-plugin": "^7.14.5",
         "@vue/cli-plugin-babel": "^4.5.12",
-        "@vue/cli-plugin-eslint": "^4.5.12",
         "@vue/cli-service": "^4.5.12",
         "@vue/eslint-config-airbnb": "^5.3.0",
         "eslint": "^7.25.0",
@@ -50,7 +49,7 @@
         "less": "^4.1.1",
         "less-loader": "^7.3.0",
         "normalize.css": "^8.0.1",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^2.7.5"
     },
     "eslintConfig": {
         "root": true,
@@ -107,6 +106,6 @@
         "defaults"
     ],
     "dependencies": {
-        "lodash.debounce": "^4.0.8"
+        "lodash": "^4.17.21"
     }
 }
